[gd_scene load_steps=17 format=3 uid="uid://bjvbg67qq86db"]

[ext_resource type="PackedScene" uid="uid://csinpw556o7ux" path="res://scenes/player.tscn" id="1_10ho3"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_se2w6"]
[ext_resource type="Texture2D" uid="uid://lhvhnunejvve" path="res://sprites/plain_boime.png" id="2_l0pn6"]
[ext_resource type="PackedScene" uid="uid://cp030u4v4at67" path="res://scenes/goblin.tscn" id="4_4me3d"]
[ext_resource type="Texture2D" uid="uid://c43p5kqhy370s" path="res://texures/heart.png" id="5_vj55y"]
[ext_resource type="PackedScene" uid="uid://rfoyb3i878pc" path="res://scenes/lose_scene.tscn" id="6_83dxx"]
[ext_resource type="Script" path="res://scripts/Hearts.gd" id="6_hv15k"]
[ext_resource type="Script" path="res://scripts/MaxHearts.gd" id="8_qgpxq"]
[ext_resource type="Shader" path="res://shader/dying.gdshader" id="8_tthfh"]
[ext_resource type="Script" path="res://scripts/spawner.gd" id="9_l8cwq"]
[ext_resource type="PackedScene" uid="uid://c1agv22pvbvaj" path="res://scenes/winning_scene.tscn" id="10_45iw7"]

[sub_resource type="TileMapPattern" id="TileMapPattern_r5abn"]
tile_data = PackedInt32Array(0, 0, 2, 1, 0, 2)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_33fmx"]
vertices = PackedVector2Array(64, 64, -64, 64, -64, -64, 64, -64)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hvayt"]
resource_name = "plain_boime"
texture = ExtResource("2_l0pn6")
texture_region_size = Vector2i(128, 128)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:0/0/terrains_peering_bit/bottom_left_corner = 0
0:0/0/terrains_peering_bit/left_side = 0
0:0/0/terrains_peering_bit/top_left_corner = 0
0:0/0/terrains_peering_bit/top_side = 0
0:0/0/terrains_peering_bit/top_right_corner = 0
0:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_33fmx")
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
1:0/0/terrains_peering_bit/top_left_corner = 0
1:0/0/terrains_peering_bit/top_side = 0
1:0/0/terrains_peering_bit/top_right_corner = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_33fmx")
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/bottom_left_corner = 0
0:1/0/terrains_peering_bit/left_side = 0
0:1/0/terrains_peering_bit/top_left_corner = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_33fmx")
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-64, -64, 64, -64, 64, 64, -64, 64)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/bottom_right_corner = 0
0:2/0/terrains_peering_bit/bottom_side = 0
0:2/0/terrains_peering_bit/bottom_left_corner = 0
0:2/0/terrains_peering_bit/left_side = 0
0:2/0/terrains_peering_bit/top_left_corner = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_upu07"]
tile_size = Vector2i(128, 128)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.501961, 0.345098, 0.25098, 1)
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_hvayt")
pattern_0 = SubResource("TileMapPattern_r5abn")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_75xxt"]
shader = ExtResource("8_tthfh")
shader_parameter/use_grayscale = true
shader_parameter/shift_color = Color(0.81, 0.81, 0.81, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_se2w6")

[node name="Player" parent="." instance=ExtResource("1_10ho3")]
z_index = 10
position = Vector2(509, 300)

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-2, 366)
tile_set = SubResource("TileSet_upu07")
format = 2
layer_0/tile_data = PackedInt32Array(-393222, 0, 1, -327686, 0, 1, -262150, 0, 1, -196614, 0, 1, -131078, 0, 1, -65542, 0, 1, -6, 0, 1, 65530, 0, 1, 131066, 0, 1, 196602, 0, 1, 262138, 0, 1, 327674, 0, 1, 393210, 0, 1, -393221, 0, 1, -327685, 0, 1, -262149, 0, 1, -196613, 0, 1, -131077, 0, 1, -65541, 0, 1, -5, 0, 1, 65531, 0, 1, 131067, 0, 1, 196603, 0, 1, 262139, 0, 1, 327675, 0, 1, 393211, 0, 1, -393220, 0, 1, -327684, 0, 1, -262148, 0, 1, -196612, 0, 2, -131076, 0, 2, -65540, 0, 1, -4, 0, 1, 65532, 0, 1, 131068, 0, 1, 196604, 0, 1, 262140, 0, 1, 327676, 0, 1, 393212, 0, 1, -393219, 0, 1, -327683, 0, 1, -262147, 0, 1, -196611, 0, 1, -131075, 0, 1, -65539, 0, 1, -3, 0, 1, 65533, 0, 1, 131069, 0, 1, 196605, 0, 1, 262141, 0, 1, 327677, 0, 2, 393213, 0, 2, -393218, 0, 1, -327682, 0, 1, -262146, 0, 1, -196610, 0, 1, -131074, 0, 1, -65538, 0, 1, -2, 0, 1, 65534, 0, 1, 131070, 0, 1, 196606, 0, 1, 262142, 0, 1, 327678, 0, 2, 393214, 0, 2, -393217, 0, 1, -327681, 0, 1, -262145, 0, 1, -196609, 0, 1, -131073, 0, 1, -65537, 0, 1, -1, 0, 1, 65535, 0, 1, 131071, 0, 1, 196607, 0, 1, 262143, 0, 1, 327679, 0, 1, 393215, 0, 1, -458752, 0, 1, -393216, 0, 1, -327680, 0, 1, -262144, 0, 1, -196608, 0, 1, -131072, 0, 1, -65536, 0, 1, 0, 0, 2, 65536, 0, 2, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, -458751, 0, 1, -393215, 0, 1, -327679, 0, 1, -262143, 0, 1, -196607, 0, 1, -131071, 0, 1, -65535, 0, 1, 1, 0, 1, 65537, 0, 2, 131073, 0, 2, 196609, 0, 1, 262145, 0, 1, 327681, 0, 1, -458750, 0, 1, -393214, 0, 1, -327678, 0, 1, -262142, 0, 1, -196606, 0, 1, -131070, 0, 1, -65534, 0, 1, 2, 0, 1, 65538, 0, 1, 131074, 0, 1, 196610, 0, 1, 262146, 0, 1, 327682, 0, 1, -458749, 0, 1, -393213, 0, 1, -327677, 0, 2, -262141, 0, 2, -196605, 0, 1, -131069, 0, 1, -65533, 0, 1, 3, 0, 1, 65539, 0, 1, 131075, 0, 1, 196611, 0, 1, 262147, 0, 1, 327683, 0, 1, -458748, 0, 1, -393212, 0, 1, -327676, 0, 2, -262140, 0, 2, -196604, 0, 1, -131068, 0, 1, -65532, 0, 1, 4, 0, 1, 65540, 0, 1, 131076, 0, 1, 196612, 0, 1, 262148, 0, 1, 327684, 0, 1, -458747, 0, 1, -393211, 0, 1, -327675, 0, 1, -262139, 0, 2, -196603, 0, 1, -131067, 0, 1, -65531, 0, 1, 5, 0, 1, 65541, 0, 1, 131077, 0, 1, 196613, 0, 2, 262149, 0, 2, 327685, 0, 1, -458746, 0, 1, -393210, 0, 1, -327674, 0, 1, -262138, 0, 1, -196602, 0, 1, -131066, 0, 1, -65530, 0, 1, 6, 0, 1, 65542, 0, 1, 131078, 0, 1, 196614, 0, 1, 262150, 0, 1, 327686, 0, 1, -458745, 0, 1, -393209, 0, 1, -327673, 0, 1, -262137, 0, 1, -196601, 0, 1, -131065, 0, 1, -65529, 0, 1, 7, 0, 1, 65543, 0, 1, 131079, 0, 1, 196615, 0, 1, 262151, 0, 1, 327687, 0, 1, -458744, 0, 1, -393208, 0, 1, -327672, 0, 1, -262136, 0, 1, -196600, 0, 1, -131064, 0, 1, -65528, 0, 1, 8, 0, 1, 65544, 0, 1, 131080, 0, 1, 196616, 0, 1, 262152, 0, 1, 327688, 0, 1, -458743, 0, 1, -393207, 0, 1, -327671, 0, 1, -262135, 0, 1, -196599, 0, 1, -131063, 0, 1, -65527, 0, 1, 9, 0, 1, 65545, 0, 1, 131081, 0, 1, 196617, 0, 1, 262153, 0, 1, 327689, 0, 1, -458742, 0, 1, -393206, 0, 1, -327670, 0, 1, -262134, 0, 1, -196598, 0, 1, -131062, 0, 1, -65526, 0, 1, 10, 0, 1, 65546, 0, 1, 131082, 0, 1, 196618, 0, 1, 262154, 0, 1, 327690, 0, 1, -458741, 0, 1, -393205, 0, 1, -327669, 0, 2, -262133, 0, 1, -196597, 0, 1, -131061, 0, 1, -65525, 0, 1, 11, 0, 2, 65547, 0, 1, 131083, 0, 1, 196619, 0, 1, 262155, 0, 1, 327691, 0, 1, -458740, 0, 1, -393204, 0, 1, -327668, 0, 1, -262132, 0, 1, -196596, 0, 1, -131060, 0, 1, -65524, 0, 2, 12, 0, 2, 65548, 0, 2, 131084, 0, 1, 196620, 0, 1, 262156, 0, 1, 327692, 0, 1, -458739, 0, 1, -393203, 0, 1, -327667, 0, 1, -262131, 0, 1, -196595, 0, 1, -131059, 0, 1, -65523, 0, 1, 13, 0, 1, 65549, 0, 1, 131085, 0, 1, 196621, 0, 1, 262157, 0, 1, 327693, 0, 1, -458738, 0, 1, -393202, 0, 1, -327666, 0, 1, -262130, 0, 1, -196594, 0, 1, -131058, 0, 1, -65522, 0, 1, 14, 0, 1, 65550, 0, 1, 131086, 0, 1, 196622, 0, 1, 262158, 0, 1, 327694, 0, 1, -458737, 0, 1, -393201, 0, 1, -327665, 0, 1, -262129, 0, 1, -196593, 0, 1, -131057, 0, 1, -65521, 0, 1, 15, 0, 1, 65551, 0, 1, 131087, 0, 1, 196623, 0, 1, 262159, 0, 1, 327695, 0, 1, -786446, 0, 1, -720910, 0, 1, -655374, 0, 1, -589838, 0, 1, -524302, 0, 1, -458766, 0, 1, -393230, 0, 1, -327694, 0, 1, -262158, 0, 1, -196622, 0, 1, -131086, 0, 1, -65550, 0, 1, -14, 0, 1, 65522, 0, 1, 131058, 0, 1, 196594, 0, 1, 262130, 0, 1, 327666, 0, 1, 393202, 0, 1, 458738, 0, 1, 524274, 0, 1, 589810, 0, 1, 655346, 0, 1, 720882, 0, 1, -786445, 0, 1, -720909, 0, 1, -655373, 0, 1, -589837, 0, 1, -524301, 0, 1, -458765, 0, 1, -393229, 0, 1, -327693, 0, 1, -262157, 0, 1, -196621, 0, 1, -131085, 0, 1, -65549, 0, 1, -13, 0, 1, 65523, 0, 1, 131059, 0, 1, 196595, 0, 1, 262131, 0, 1, 327667, 0, 1, 393203, 0, 1, 458739, 0, 1, 524275, 0, 1, 589811, 0, 1, 655347, 0, 1, 720883, 0, 1, -786444, 0, 1, -720908, 0, 1, -655372, 0, 1, -589836, 0, 1, -524300, 0, 1, -458764, 0, 1, -393228, 0, 1, -327692, 0, 1, -262156, 0, 1, -196620, 0, 1, -131084, 0, 1, -65548, 0, 1, -12, 0, 1, 65524, 0, 1, 131060, 0, 1, 196596, 0, 1, 262132, 0, 1, 327668, 0, 1, 393204, 0, 1, 458740, 0, 1, 524276, 0, 1, 589812, 0, 1, 655348, 0, 1, 720884, 0, 1, -786443, 0, 1, -720907, 0, 1, -655371, 0, 1, -589835, 0, 1, -524299, 0, 1, -458763, 0, 1, -393227, 0, 1, -327691, 0, 1, -262155, 0, 1, -196619, 0, 1, -131083, 0, 1, -65547, 0, 1, -11, 0, 1, 65525, 0, 1, 131061, 0, 1, 196597, 0, 1, 262133, 0, 1, 327669, 0, 1, 393205, 0, 1, 458741, 0, 1, 524277, 0, 1, 589813, 0, 1, 655349, 0, 1, 720885, 0, 1, -786442, 0, 1, -720906, 0, 1, -655370, 0, 1, -589834, 0, 1, -524298, 0, 1, -458762, 0, 1, -393226, 0, 1, -327690, 0, 1, -262154, 0, 1, -196618, 0, 1, -131082, 0, 1, -65546, 0, 1, -10, 0, 1, 65526, 0, 1, 131062, 0, 1, 196598, 0, 1, 262134, 0, 1, 327670, 0, 1, 393206, 0, 1, 458742, 0, 1, 524278, 0, 1, 589814, 0, 1, 655350, 0, 1, 720886, 0, 1, -786441, 0, 1, -720905, 0, 1, -655369, 0, 1, -589833, 0, 1, -524297, 0, 1, -458761, 0, 1, -393225, 0, 1, -327689, 0, 1, -262153, 0, 1, -196617, 0, 1, -131081, 0, 1, -65545, 0, 1, -9, 0, 1, 65527, 0, 1, 131063, 0, 1, 196599, 0, 1, 262135, 0, 1, 327671, 0, 1, 393207, 0, 1, 458743, 0, 1, 524279, 0, 1, 589815, 0, 1, 655351, 0, 1, 720887, 0, 1, -786440, 0, 1, -720904, 0, 1, -655368, 0, 1, -589832, 0, 1, -524296, 0, 1, -458760, 0, 1, -393224, 0, 1, -327688, 0, 1, -262152, 0, 1, -196616, 0, 1, -131080, 0, 1, -65544, 0, 1, -8, 0, 1, 65528, 0, 1, 131064, 0, 1, 196600, 0, 1, 262136, 0, 1, 327672, 0, 1, 393208, 0, 1, 458744, 0, 1, 524280, 0, 1, 589816, 0, 1, 655352, 0, 1, 720888, 0, 1, -786439, 0, 1, -720903, 0, 1, -655367, 0, 1, -589831, 0, 1, -524295, 0, 1, -458759, 0, 1, -393223, 0, 1, -327687, 0, 1, -262151, 0, 1, -196615, 0, 1, -131079, 0, 1, -65543, 0, 1, -7, 0, 1, 65529, 0, 1, 131065, 0, 1, 196601, 0, 1, 262137, 0, 1, 327673, 0, 1, 393209, 0, 1, 458745, 0, 1, 524281, 0, 1, 589817, 0, 1, 655353, 0, 1, 720889, 0, 1, -786438, 0, 1, -720902, 0, 1, -655366, 0, 1, -589830, 0, 1, -524294, 0, 1, -458758, 0, 1, 458746, 0, 1, 524282, 0, 1, 589818, 0, 1, 655354, 0, 1, 720890, 0, 1, -786437, 0, 1, -720901, 0, 1, -655365, 0, 1, -589829, 0, 1, -524293, 0, 1, -458757, 0, 1, 458747, 0, 1, 524283, 0, 1, 589819, 0, 1, 655355, 0, 1, 720891, 0, 1, -786436, 0, 1, -720900, 0, 1, -655364, 0, 1, -589828, 0, 1, -524292, 0, 1, -458756, 0, 1, 458748, 0, 1, 524284, 0, 1, 589820, 0, 1, 655356, 0, 1, 720892, 0, 1, -786435, 0, 1, -720899, 0, 1, -655363, 0, 1, -589827, 0, 1, -524291, 0, 1, -458755, 0, 1, 458749, 0, 1, 524285, 0, 1, 589821, 0, 1, 655357, 0, 1, 720893, 0, 1, -786434, 0, 1, -720898, 0, 1, -655362, 0, 1, -589826, 0, 1, -524290, 0, 1, -458754, 0, 1, 458750, 0, 1, 524286, 0, 1, 589822, 0, 1, 655358, 0, 1, 720894, 0, 1, -786433, 0, 1, -720897, 0, 1, -655361, 0, 1, -589825, 0, 1, -524289, 0, 1, -458753, 0, 1, 458751, 0, 1, 524287, 0, 1, 589823, 0, 1, 655359, 0, 1, 720895, 0, 1, -851968, 0, 1, -786432, 0, 1, -720896, 0, 1, -655360, 0, 1, -589824, 0, 1, -524288, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 589824, 0, 1, 655360, 0, 1, -851967, 0, 1, -786431, 0, 1, -720895, 0, 1, -655359, 0, 1, -589823, 0, 1, -524287, 0, 1, 393217, 0, 1, 458753, 0, 1, 524289, 0, 1, 589825, 0, 1, 655361, 0, 1, -851966, 0, 1, -786430, 0, 1, -720894, 0, 1, -655358, 0, 1, -589822, 0, 1, -524286, 0, 1, 393218, 0, 1, 458754, 0, 1, 524290, 0, 1, 589826, 0, 1, 655362, 0, 1, -851965, 0, 1, -786429, 0, 1, -720893, 0, 1, -655357, 0, 1, -589821, 0, 1, -524285, 0, 1, 393219, 0, 1, 458755, 0, 1, 524291, 0, 1, 589827, 0, 1, 655363, 0, 1, -851964, 0, 1, -786428, 0, 1, -720892, 0, 1, -655356, 0, 1, -589820, 0, 1, -524284, 0, 1, 393220, 0, 1, 458756, 0, 1, 524292, 0, 1, 589828, 0, 1, 655364, 0, 1, -851963, 0, 1, -786427, 0, 1, -720891, 0, 1, -655355, 0, 1, -589819, 0, 1, -524283, 0, 1, 393221, 0, 1, 458757, 0, 1, 524293, 0, 1, 589829, 0, 1, 655365, 0, 1, -851962, 0, 1, -786426, 0, 1, -720890, 0, 1, -655354, 0, 1, -589818, 0, 1, -524282, 0, 1, 393222, 0, 1, 458758, 0, 1, 524294, 0, 1, 589830, 0, 1, 655366, 0, 1, -851961, 0, 1, -786425, 0, 1, -720889, 0, 1, -655353, 0, 1, -589817, 0, 1, -524281, 0, 1, 393223, 0, 1, 458759, 0, 1, 524295, 0, 1, 589831, 0, 1, 655367, 0, 1, -851960, 0, 1, -786424, 0, 1, -720888, 0, 1, -655352, 0, 1, -589816, 0, 1, -524280, 0, 1, 393224, 0, 1, 458760, 0, 1, 524296, 0, 1, 589832, 0, 1, 655368, 0, 1, -851959, 0, 1, -786423, 0, 1, -720887, 0, 1, -655351, 0, 1, -589815, 0, 1, -524279, 0, 1, 393225, 0, 1, 458761, 0, 1, 524297, 0, 1, 589833, 0, 1, 655369, 0, 1, -851958, 0, 1, -786422, 0, 1, -720886, 0, 1, -655350, 0, 1, -589814, 0, 1, -524278, 0, 1, 393226, 0, 2, 458762, 0, 1, 524298, 0, 1, 589834, 0, 1, 655370, 0, 1, -851957, 0, 1, -786421, 0, 1, -720885, 0, 1, -655349, 0, 1, -589813, 0, 1, -524277, 0, 1, 393227, 0, 2, 458763, 0, 1, 524299, 0, 1, 589835, 0, 1, 655371, 0, 1, -851956, 0, 1, -786420, 0, 1, -720884, 0, 1, -655348, 0, 1, -589812, 0, 1, -524276, 0, 1, 393228, 0, 1, 458764, 0, 1, 524300, 0, 1, 589836, 0, 1, 655372, 0, 1, -851955, 0, 1, -786419, 0, 1, -720883, 0, 1, -655347, 0, 1, -589811, 0, 1, -524275, 0, 1, 393229, 0, 1, 458765, 0, 1, 524301, 0, 1, 589837, 0, 1, 655373, 0, 1, -851954, 0, 1, -786418, 0, 1, -720882, 0, 1, -655346, 0, 1, -589810, 0, 1, -524274, 0, 1, 393230, 0, 1, 458766, 0, 1, 524302, 0, 1, 589838, 0, 1, 655374, 0, 1, -851953, 0, 1, -786417, 0, 1, -720881, 0, 1, -655345, 0, 1, -589809, 0, 1, -524273, 0, 1, 393231, 0, 1, 458767, 0, 1, 524303, 0, 1, 589839, 0, 1, 655375, 0, 1, -851952, 0, 1, -786416, 0, 1, -720880, 0, 1, -655344, 0, 1, -589808, 0, 1, -524272, 0, 1, -458736, 0, 1, -393200, 0, 1, -327664, 0, 1, -262128, 0, 1, -196592, 0, 1, -131056, 0, 1, -65520, 0, 1, 16, 0, 1, 65552, 0, 2, 131088, 0, 2, 196624, 0, 1, 262160, 0, 1, 327696, 0, 1, 393232, 0, 1, 458768, 0, 1, 524304, 0, 1, 589840, 0, 1, 655376, 0, 1, -851951, 0, 1, -786415, 0, 1, -720879, 0, 1, -655343, 0, 1, -589807, 0, 1, -524271, 0, 1, -458735, 0, 1, -393199, 0, 1, -327663, 0, 1, -262127, 0, 1, -196591, 0, 1, -131055, 0, 1, -65519, 0, 1, 17, 0, 1, 65553, 0, 2, 131089, 0, 2, 196625, 0, 1, 262161, 0, 1, 327697, 0, 1, 393233, 0, 1, 458769, 0, 1, 524305, 0, 1, 589841, 0, 1, 655377, 0, 1, -851950, 0, 1, -786414, 0, 1, -720878, 0, 1, -655342, 0, 1, -589806, 0, 1, -524270, 0, 1, -458734, 0, 1, -393198, 0, 1, -327662, 0, 1, -262126, 0, 1, -196590, 0, 1, -131054, 0, 1, -65518, 0, 1, 18, 0, 1, 65554, 0, 1, 131090, 0, 2, 196626, 0, 2, 262162, 0, 1, 327698, 0, 1, 393234, 0, 1, 458770, 0, 1, 524306, 0, 1, 589842, 0, 1, 655378, 0, 1, -851949, 0, 1, -786413, 0, 1, -720877, 0, 1, -655341, 0, 1, -589805, 0, 1, -524269, 0, 1, -458733, 0, 1, -393197, 0, 1, -327661, 0, 1, -262125, 0, 1, -196589, 0, 1, -131053, 0, 1, -65517, 0, 1, 19, 0, 1, 65555, 0, 1, 131091, 0, 1, 196627, 0, 1, 262163, 0, 1, 327699, 0, 1, 393235, 0, 1, 458771, 0, 1, 524307, 0, 1, 589843, 0, 1, 655379, 0, 1, -851948, 0, 1, -786412, 0, 1, -720876, 0, 1, -655340, 0, 1, -589804, 0, 1, -524268, 0, 1, -458732, 0, 1, -393196, 0, 1, -327660, 0, 1, -262124, 0, 1, -196588, 0, 1, -131052, 0, 1, -65516, 0, 1, 20, 0, 1, 65556, 0, 1, 131092, 0, 1, 196628, 0, 1, 262164, 0, 1, 327700, 0, 1, 393236, 0, 1, 458772, 0, 1, 524308, 0, 1, 589844, 0, 1, 655380, 0, 1, -851947, 0, 1, -786411, 0, 1, -720875, 0, 1, -655339, 0, 1, -589803, 0, 1, -524267, 0, 1, -458731, 0, 1, -393195, 0, 1, -327659, 0, 1, -262123, 0, 1, -196587, 0, 1, -131051, 0, 1, -65515, 0, 1, 21, 0, 1, 65557, 0, 1, 131093, 0, 1, 196629, 0, 1, 262165, 0, 1, 327701, 0, 1, 393237, 0, 1, 458773, 0, 1, 524309, 0, 1, 589845, 0, 1, 655381, 0, 1, -851946, 0, 1, -786410, 0, 1, -720874, 0, 1, -655338, 0, 1, -589802, 0, 1, -524266, 0, 1, -458730, 0, 1, -393194, 0, 1, -327658, 0, 1, -262122, 0, 1, -196586, 0, 1, -131050, 0, 1, -65514, 0, 1, 22, 0, 1, 65558, 0, 1, 131094, 0, 1, 196630, 0, 1, 262166, 0, 1, 327702, 0, 1, 393238, 0, 1, 458774, 0, 1, 524310, 0, 1, 589846, 0, 1, 655382, 0, 1, -851945, 0, 1, -786409, 0, 1, -720873, 0, 1, -655337, 0, 1, -589801, 0, 1, -524265, 0, 1, -458729, 0, 1, -393193, 0, 1, -327657, 0, 1, -262121, 0, 1, -196585, 0, 1, -131049, 0, 1, -65513, 0, 1, 23, 0, 1, 65559, 0, 1, 131095, 0, 1, 196631, 0, 1, 262167, 0, 1, 327703, 0, 1, 393239, 0, 1, 458775, 0, 1, 524311, 0, 1, 589847, 0, 1, 655383, 0, 1, -851944, 0, 1, -786408, 0, 1, -720872, 0, 1, -655336, 0, 1, -589800, 0, 1, -524264, 0, 1, -458728, 0, 1, -393192, 0, 1, -327656, 0, 1, -262120, 0, 1, -196584, 0, 1, -131048, 0, 1, -65512, 0, 1, 24, 0, 1, 65560, 0, 1, 131096, 0, 1, 196632, 0, 1, 262168, 0, 1, 327704, 0, 1, 393240, 0, 1, 458776, 0, 1, 524312, 0, 1, 589848, 0, 1, 655384, 0, 1, -851943, 0, 1, -786407, 0, 1, -720871, 0, 1, -655335, 0, 1, -589799, 0, 1, -524263, 0, 1, -458727, 0, 1, -393191, 0, 1, -327655, 0, 1, -262119, 0, 1, -196583, 0, 1, -131047, 0, 1, -65511, 0, 1, 25, 0, 1, 65561, 0, 1, 131097, 0, 1, 196633, 0, 1, 262169, 0, 1, 327705, 0, 1, 393241, 0, 1, 458777, 0, 1, 524313, 0, 1, 589849, 0, 1, 655385, 0, 1, -851942, 0, 1, -786406, 0, 1, -720870, 0, 1, -655334, 0, 1, -589798, 0, 1, -524262, 0, 1, -458726, 0, 1, -393190, 0, 1, -327654, 0, 1, -262118, 0, 1, -196582, 0, 1, -131046, 0, 1, -65510, 0, 1, 26, 0, 1, 65562, 0, 1, 131098, 0, 1, 196634, 0, 1, 262170, 0, 1, 327706, 0, 1, 393242, 0, 1, 458778, 0, 1, 524314, 0, 1, 589850, 0, 1, 655386, 0, 1, -851941, 0, 1, -786405, 0, 1, -720869, 0, 1, -655333, 0, 1, -589797, 0, 1, -524261, 0, 1, -458725, 0, 1, -393189, 0, 1, -327653, 0, 1, -262117, 0, 1, -196581, 0, 1, -131045, 0, 1, -65509, 0, 1, 27, 0, 1, 65563, 0, 1, 131099, 0, 1, 196635, 0, 1, 262171, 0, 1, 327707, 0, 1, 393243, 0, 1, 458779, 0, 1, 524315, 0, 1, 589851, 0, 1, 655387, 0, 1)

[node name="Goblin" parent="." instance=ExtResource("4_4me3d")]
position = Vector2(1107, 145)

[node name="Goblin2" parent="." node_paths=PackedStringArray("target") instance=ExtResource("4_4me3d")]
position = Vector2(1124, 613)
target = NodePath("../Player")

[node name="UI" type="CanvasLayer" parent="."]

[node name="WinningScene" parent="UI" instance=ExtResource("10_45iw7")]
visible = false

[node name="LoseScene" parent="UI" instance=ExtResource("6_83dxx")]
visible = false

[node name="Life" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Hearts" type="TextureRect" parent="UI/Life"]
z_index = 1
layout_mode = 0
offset_left = 450.0
offset_top = 950.0
offset_right = 1857.0
offset_bottom = 1078.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_vj55y")
expand_mode = 1
stretch_mode = 1
script = ExtResource("6_hv15k")

[node name="MaxHearts" type="TextureRect" parent="UI/Life"]
material = SubResource("ShaderMaterial_75xxt")
layout_mode = 0
offset_left = 450.0
offset_top = 950.0
offset_right = 1870.0
offset_bottom = 1078.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_vj55y")
expand_mode = 2
stretch_mode = 1
script = ExtResource("8_qgpxq")

[node name="Kill" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.878431, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Kill: 0"

[node name="Spawner" type="Node" parent="."]
script = ExtResource("9_l8cwq")
internval_seconds = 3
top_left = Vector2(-19, 19)
bottom_right = Vector2(19, -19)

[connection signal="health_change" from="Player" to="UI/Life" method="_on_player_health_change"]
[connection signal="health_change" from="Player" to="UI/Life/Hearts" method="_on_player_health_change"]
[connection signal="hero_death" from="Player" to="." method="_on_player_hero_death"]
[connection signal="max_health_change" from="Player" to="UI/Life/MaxHearts" method="_on_player_max_health_change"]
[connection signal="mob_death" from="Goblin" to="." method="_on_mob_death"]
[connection signal="mob_death" from="Goblin2" to="." method="_on_mob_death"]
